--- a/templates/staffHome.html
+++ b/templates/staffHome.html
@@ -33,10 +33,8 @@
     <table>
         <th>Airline</th>
         <th>Flight No.</th>
-        <th>Departure Date</th>
-        <th>Departure Time</th>
-        <th>Arrival Date</th>
-        <th>Arrival Time</th>
+        <th>Departure Date/Time</th>
+        <th>Arrival Date/Time</th>
         <th>Status</th>
         <th>Base Price</th>
         <th>Departure Airport</th>
