made revisions for flight.py
shortened the query

--- a/templates/customerHome.html
+++ b/templates/customerHome.html
@@ -6,10 +6,17 @@
 </head>
 <body>
     Welcome, {{customer['name']}} </br></br>
-
-    <a href="/viewflightsCust">Search flights</a>
+    <a href="/viewflights">My flights</a>
+    <br></br>
+    <a href="/viewflights">Search for flights</a>
+    <br></br>
+    <!-- This links doesn't work -->
     <a href="/purchaseTicketCust">Purchase a ticket</a>
+    <br></br>
+    <!-- This links doesn't work -->
     <a href="/rateFlight">Rate a flight</a>
+    <br></br>
+    <!-- This links doesn't work -->
     <a href="/trackSpending">Track my spending</a></br></br>
 
     <style type="text/css">
