--- a/templates/index.html
+++ b/templates/index.html
@@ -10,13 +10,49 @@
 
 
 <body>
-    <a href="/viewflights">Search Upcoming Flights</a><br><br>
-    <a href="/staffLogin">Staff Login</a>
-    <a href="/staffRegister">Staff Register</a> </br>
-    <a href="/customerLogin">Customer Login</a>
-    <a href="/customerRegister">Customer Register</a> </br>
+    <!-- <img src="https://media.istockphoto.com/id/155439315/photo/passenger-airplane-flying-above-clouds-during-sunset.jpg?b=1&s=170667a&w=0&k=20&c=0ptevX36IqBQM1P4PoCycpe8Vj-QAhITR7oNn9R991g="
+        width="800" 
+        height="900"> -->
+    <style> 
+        body {
+
+            /* 
+            https://wallpaper.dog/large/10878270.jpg
+            */
+            background-image: url("https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/979006EAC18F6DC99AE5203369730D01DE72F1137DF0A092AB6741FFE9D55A9E/scale?width=1200&aspectRatio=1.78&format=jpeg");
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+        }
+    </style>
+
+
+
+    <h1 align="center"> Air Ticket <br> Reservation System </h1></br>
+
+
+    <a href="/viewflights"> Search Upcoming Flights</a>
+    <br></br>
+    <a href="/staffLogin"> Staff Login</a>
+    <br></br>
+    <a href="/staffRegister"> Staff Register</a>
+    <br></br>
+    <a href="/customerLogin"> Customer Login</a>
+    <br></br>
+    <a href="/customerRegister"> Customer Register</a>
+    <br></br>
+    <a href="/testing"> Testing </a>
+
+    
     {% if error %}
         <p class="error"><strong>Error:</strong> {{error}}</p>
     {% endif %}
+
+
+
+
+
 </body>
+
 </html>
