--- a/templates/customerHome.html
+++ b/templates/customerHome.html
@@ -8,10 +8,8 @@
     Welcome, {{customer['name']}} </br></br>
     <a href="/viewflights">My flights</a>
     <br></br>
-    <a href="/viewflights">Search for flights</a>
-    <br></br>
     <!-- This links doesn't work -->
-    <a href="/purchaseTicketCust">Purchase a ticket</a>
+    <a href="/customerPurchase">Purchase a ticket</a>
     <br></br>
     <!-- This links doesn't work -->
     <a href="/rateFlight">Rate a flight</a>
