--- a/templates/customerHome.html
+++ b/templates/customerHome.html
@@ -6,15 +6,15 @@
 </head>
 <body>
     Welcome, {{customer['name']}} </br></br>
-    <a href="/viewflights">My flights</a>
+    <a href="/customerviewflights">My flights</a>
     <br></br>
-    <a href="/viewflights">Search for flights</a>
+    <!-- <a href="/viewflights">Search for flights</a>
+    <br></br> -->
+    <!-- This links doesn't work -->
+    <a href="/customerPurchase">Purchase a ticket</a>
     <br></br>
     <!-- This links doesn't work -->
-    <a href="/purchaseTicketCust">Purchase a ticket</a>
-    <br></br>
-    <!-- This links doesn't work -->
-    <a href="/rateFlight">Rate a flight</a>
+    <a href="/customerRateflight">Rate a flight</a>
     <br></br>
     <!-- This links doesn't work -->
     <a href="/trackSpending">Track my spending</a></br></br>
