--- a/templates/customerHome.html
+++ b/templates/customerHome.html
@@ -5,7 +5,7 @@
     </h1>
 </head>
 <body>
-    Welcome, {{customer['name']}} </br></br>
+    <b><h3>Welcome, {{customer['name']}} </h3></br></b>
     <a href="/customerviewflights">My flights</a>
     <br></br>
     <!-- <a href="/viewflights">Search for flights</a>
@@ -27,7 +27,7 @@
         }
     </style>
 
-    My upcoming flights:
+    <b>My upcoming flights:</b>
     <table>
         <th>Airline</th>
         <th>Flight No.</th>
