--- a/templates/customerPurchase.html
+++ b/templates/customerPurchase.html
@@ -17,6 +17,7 @@
     Available Flights to Purchase From:
     <table>
         <th>Base Price</th>
+        <th>Ticket ID</th>
         <th>Airline</th>
         <th>Flight No.</th>
         <th>Departure Date & Time</th>
@@ -28,6 +29,7 @@
         {% for line in flights %}
         <tr>
             <td>${{line['base_price']}}</td>
+            <td>{{line['ticket_ID']}}</td>
             <td>{{line['airline_name']}}</td>
             <td>{{line['flight_number']}}</td>
             <td>{{line['departure_date_time']}}</td>
@@ -39,35 +41,32 @@
         {% endfor %}
     </table></br>
 
-    <form action="/customerPurchase" method="POST">
-    <fieldset>
-        <legend><b>Purchase your Ticket Today!</b></legend>
-        <b>Flight Information:</br></b>
-        <input type="text" name="Flight Number" placeholder="Flight Number" maxlength="10" required /> </br>
-        </br>
+    <form action="/customerPurchaseUpdate" method="POST">
+        <fieldset><legend><b>Purchase your Ticket Today!</b></legend>
+        <b>Flight Number:</br></b>
+        <input type="numeric" name="ticket_ID" placeholder="Flight Number" maxlength="10" required /> </br></br>
         <b>Customer Information:</br></b>
         <input type="text" name="Fname" placeholder="First Name" maxlength="225" required /></br>
         <input type="text" name="Lname" placeholder="Last Name" maxlength="225" required /></br>
-        <!--<input type="email" id="email" name="email" placeholder="Email" maxlength="225" required></br> -->
         <br><b>Payment Information:</br></b>
-        <input id="ccn" type="tel" inputmode="numeric" pattern="[0-9\s]{13,19}" autocomplete="cc-number" maxlength="19" placeholder="XXXX XXXX XXXX XXXX">
+        <input id="ccn" type="tel" inputmode="numeric" pattern="[0-9\s]{13,19}" name="cc-number" maxlength="19" placeholder="XXXX XXXX XXXX XXXX">
         <select name="card type" id="card type">
           <option value="credit_card">Credit Card</option>
           <option value="debit_card">Debit Card</option>
         </select></br>
-        <input type="text" name="Name of Card" placeholder="full name on card" maxlength="225" required />
+        <input type="text" name="Name of Card" placeholder="Name on Card" maxlength="225" required />
         <input type="date" name="expiration start" value="expiration date" min="2022-11-29" max="2030-12-31">
         <br><br>
-        <form action="/customerPurchase" class="inline">
-            <button class="submit-button" >Submit</button>
-        </form>
-    
-    </fieldset>
-
+        <br><input type="submit" value=submit />
         {% if error %}
         <p class="error"><strong>Error:</strong> {{error}}</p>
         {% endif %}
     </form>
+    
+    </fieldset> 
+
+
+
 
     <a href="/customerHome">Go back</a>
 
