--- a/templates/customerPurchase.html
+++ b/templates/customerPurchase.html
@@ -44,7 +44,7 @@
     <form action="/customerPurchaseUpdate" method="POST">
         <fieldset><legend><b>Purchase your Ticket Today!</b></legend>
         <b>Flight Number:</br></b>
-        <input type="numeric" name="ticket_ID" placeholder="Flight Number" maxlength="10" required /> </br></br>
+        <input type="numeric" name="flightNo" placeholder="Flight Number" maxlength="10" required /> </br></br>
         <b>Customer Information:</br></b>
         <input type="text" name="Fname" placeholder="First Name" maxlength="225" required /></br>
         <input type="text" name="Lname" placeholder="Last Name" maxlength="225" required /></br>
