--- a/templates/customerPurchase.html
+++ b/templates/customerPurchase.html
@@ -51,8 +51,8 @@
         <br><b>Payment Information:</br></b>
         <input id="ccn" type="tel" inputmode="numeric" pattern="[0-9\s]{13,19}" name="cc-number" maxlength="19" placeholder="XXXX XXXX XXXX XXXX">
         <select name="card type" id="card type">
-          <option value="credit_card">Credit Card</option>
-          <option value="debit_card">Debit Card</option>
+          <option value="credit">Credit Card</option>
+          <option value="debit">Debit Card</option>
         </select></br>
         <input type="text" name="Name of Card" placeholder="Name on Card" maxlength="225" required />
         <input type="date" name="expiration start" value="expiration date" min="2022-11-29" max="2030-12-31">
