--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <title>
-        Air Ticket Reservation System
+    <title >
+        Air Ticket Reservation System 
     </title>
 </head>
 
@@ -19,7 +19,8 @@
             /* 
             https://wallpaper.dog/large/10878270.jpg
             */
-            background-image: url("https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/979006EAC18F6DC99AE5203369730D01DE72F1137DF0A092AB6741FFE9D55A9E/scale?width=1200&aspectRatio=1.78&format=jpeg");
+            background-image:url('https://media4.giphy.com/media/sRHVFZVZlHsOBwYTFn/giphy.gif'); 
+            background-repeat:repeat;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -27,20 +28,18 @@
         }
     </style>
 
+    <h1 align="center" style="color:#236598;" style = font-size:50px> Air Ticket <br> Reservation System </h1></br>
 
 
-    <h1 align="center"> Air Ticket <br> Reservation System </h1></br>
-
-
-    <a href="/viewflights"> Search Upcoming Flights</a>
+    <a href="/viewflights" style="color:#FF0000;"> Search Upcoming Flights</a>
     <br></br>
-    <a href="/staffLogin"> Staff Login</a>
+    <a href="/staffLogin" style="color:#FF0000;"> Staff Login</a>
     <br></br>
-    <a href="/staffRegister"> Staff Register</a>
+    <a href="/staffRegister" style="color:#FF0000;"> Staff Register</a>
     <br></br>
-    <a href="/customerLogin"> Customer Login</a>
+    <a href="/customerLogin" style="color:#FF0000;"> Customer Login</a>
     <br></br>
-    <a href="/customerRegister"> Customer Register</a>
+    <a href="/customerRegister" style="color:#FF0000;"> Customer Register</a>
     <br></br>
     <a href="/testing"> Testing </a>
 
