--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
     <h1 align="center"> Air Ticket <br> Reservation System </h1></br>
 
 
-    <a href="/viewflights"> Search Upcoming Flights</a>
+    <a href="/viewFlights"> Search Upcoming Flights</a>
     <br></br>
     <a href="/staffLogin"> Staff Login</a>
     <br></br>
@@ -42,8 +42,6 @@
     <br></br>
     <a href="/customerRegister"> Customer Register</a>
     <br></br>
-    <a href="/testing"> Testing </a>
-
     
     {% if error %}
         <p class="error"><strong>Error:</strong> {{error}}</p>
