--- a/templates/customerviewflights.html
+++ b/templates/customerviewflights.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     Filter My Tickets: </br>
-    <form action="/customerviewflights" method="POST">
-        <input type="text" name="sourceairport" placeholder="Source airport" maxlength="20" /></br>
-        <input type="text" name="destairport" placeholder="Destination airport" maxlength="20" /></br>
+    <form action="/customerviewflightsUpdate" method="POST">
+        <input type="text" name="departureairport" placeholder="Departure Airport" maxlength="20" /></br>
+        <input type="text" name="arrivalairport" placeholder="Arrival airport" maxlength="20" /></br>
         <input type="date" name="departdate" /> Departure date</br>
         <input type="date" name="returndate" /> Return date (For round-trips)</br></br>
         <!-- the button doesn't work -->
