--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,9 @@
 
             /* 
             https://wallpaper.dog/large/10878270.jpg
+            http://elnoti.com/wp-content/uploads/2018/04/6-5.gif
             */
-            background-image:url('https://media4.giphy.com/media/sRHVFZVZlHsOBwYTFn/giphy.gif'); 
+            background-image:url('https://media1.giphy.com/media/kyRal0h9R4TXq9mOWK/giphy.gif'); 
             background-repeat:repeat;
             -webkit-background-size: cover;
             -moz-background-size: cover;
@@ -28,18 +29,18 @@
         }
     </style>
 
-    <h1 align="center" style="color:#236598;" style = font-size:50px> Air Ticket <br> Reservation System </h1></br>
+    <h1 align="center" style="color:#01ffea;" style = font-size:50px> Air Ticket <br> Reservation System </h1></br>
 
 
-    <a href="/viewflights" style="color:#FF0000;"> Search Upcoming Flights</a>
+    <a href="/viewflights" style="color:#ffffff;"> Search Upcoming Flights</a>
     <br></br>
-    <a href="/staffLogin" style="color:#FF0000;"> Staff Login</a>
+    <a href="/staffLogin" style="color:#ffffff;"> Staff Login</a>
     <br></br>
-    <a href="/staffRegister" style="color:#FF0000;"> Staff Register</a>
+    <a href="/staffRegister" style="color:#ffffff;"> Staff Register</a>
     <br></br>
-    <a href="/customerLogin" style="color:#FF0000;"> Customer Login</a>
+    <a href="/customerLogin" style="color:#ffffff;"> Customer Login</a>
     <br></br>
-    <a href="/customerRegister" style="color:#FF0000;"> Customer Register</a>
+    <a href="/customerRegister" style="color:#ffffff;"> Customer Register</a>
     <br></br>
     <a href="/testing"> Testing </a>
 
