--- a/templates/testing.html
+++ b/templates/testing.html
@@ -1,208 +1,226 @@
-<!DOCTYPE html><html><head><link href="https://fonts.googleapis.com/css?family=Aleo&display=swap" rel="stylesheet" /></head><body><div class="v207_313"><div class="v207_322"></div><div class="v207_314"></div><div class="v207_315"><div class="v207_316"></div><span class="v207_317">Register</span></div><div class="v207_318"><div class="v207_319"></div><span class="v207_320">Login</span></div><span class="v207_321">Air Ticket 
-    Reservation System</span><div class="v207_325"></div><div class="v209_341"><div class="v208_333"></div><span class="v208_334">Search</span></div><div class="v208_336"></div><div class="v209_340"></div><span class="v208_335">Source Airport</span><span class="v208_339">Destination Airport</span></div></body></html> <br/><br/> <style>* {
-      box-sizing: border-box;
-    }
-    body {
-      font-size: 14px;
-    }
-    .v207_313 {
-      width: 100%;
-      height: 1117px;
-      background: rgba(255,255,255,1);
-      opacity: 1;
-      position: absolute;
-      top: 0px;
-      left: 0px;
-      overflow: hidden;
-    }
-    .v207_322 {
-      width: 100%;
-      height: 100%;
-      background: url("https://hips.hearstapps.com/bpc.h-cdn.co/assets/17/23/1496690479-new-york-tourist-attractions.jpg");
-      opacity: 1;
-      position: absolute;
-      top: 0px;
-      left: 0px;
-    }
-    .v207_314 {
-      width: 100%;
-      height: 106px;
-      background: rgba(0,0,0,1);
-      opacity: 1;
-      position: absolute;
-      top: 0px;
-      left: 0px;
-      overflow: hidden;
-    }
-    .v207_315 {
-      width: 137px;
-      height: 48px;
-      background: url("../images/v207_315.png");
-      background-repeat: no-repeat;
-      background-position: center center;
-      background-size: cover;
-      opacity: 1;
-      position: absolute;
-      top: 29px;
-      left: 1383px;
-      overflow: hidden;
-    }
-    .v207_316 {
-      width: 137px;
-      height: 48px;
-      background: rgba(178,51,51,1);
-      opacity: 1;
-      position: absolute;
-      top: 0px;
-      left: 0px;
-      overflow: hidden;
-    }
-    .v207_317 {
-      width: 98px;
-      color: rgba(255,255,255,1);
-      position: absolute;
-      top: 9px;
-      left: 27px;
-      font-family: Aleo;
-      font-weight: Regular;
-      font-size: 24px;
-      opacity: 1;
-      text-align: left;
-    }
-    .v207_318 {
-      width: 137px;
-      height: 48px;
-      background: url("../images/v207_318.png");
-      background-repeat: no-repeat;
-      background-position: center center;
-      background-size: cover;
-      opacity: 1;
-      position: absolute;
-      top: 29px;
-      left: 1553px;
-      overflow: hidden;
-    }
-    .v207_319 {
-      width: 137px;
-      height: 48px;
-      background: rgba(41,104,162,1);
-      opacity: 1;
-      position: absolute;
-      top: 0px;
-      left: 0px;
-      overflow: hidden;
-    }
-    .v207_320 {
-      width: 61px;
-      color: rgba(255,255,255,1);
-      position: absolute;
-      top: 9px;
-      left: 38px;
-      font-family: Aleo;
-      font-weight: Regular;
-      font-size: 24px;
-      opacity: 1;
-      text-align: left;
-    }
-    .v207_321 {
-      width: 460px;
-      color: rgba(255,255,255,1);
-      position: absolute;
-      top: 18px;
-      left: 39px;
-      font-family: Aleo;
-      font-weight: Regular;
-      font-size: 36px;
-      opacity: 1;
-      text-align: left;
-    }
-    .v207_325 {
-      width: 100%;
-      height: 688px;
-      background: rgba(0,0,0,0.7799999713897705);
-      opacity: 1;
-      position: absolute;
-      top: 180px;
-      left: 0px;
-      overflow: hidden;
-    }
-    .v209_341 {
-      width: 102px;
-      height: 36px;
-      background: url("../images/v209_341.png");
-      background-repeat: no-repeat;
-      background-position: center center;
-      background-size: cover;
-      opacity: 1;
-      position: absolute;
-      top: 212px;
-      left: 857px;
-      overflow: hidden;
-    }
-    .v208_333 {
-      width: 102px;
-      height: 30px;
-      background: rgba(16,123,7,1);
-      opacity: 1;
-      position: absolute;
-      top: 0px;
-      left: 0px;
-      overflow: hidden;
-    }
-    .v208_334 {
-      width: 46px;
-      color: rgba(255,255,255,1);
-      position: absolute;
-      top: 9px;
-      left: 28px;
-      font-family: Aleo;
-      font-weight: Regular;
-      font-size: 15px;
-      opacity: 1;
-      text-align: left;
-    }
-    .v208_336 {
-      width: 380px;
-      height: 30px;
-      background: rgba(217,217,217,1);
-      opacity: 1;
-      position: absolute;
-      top: 212px;
-      left: 39px;
-      overflow: hidden;
-    }
-    .v209_340 {
-      width: 357px;
-      height: 30px;
-      background: rgba(217,217,217,1);
-      opacity: 1;
-      position: absolute;
-      top: 212px;
-      left: 459px;
-      overflow: hidden;
-    }
-    .v208_335 {
-      width: 169px;
-      color: rgba(0,0,0,1);
-      position: absolute;
-      top: 215px;
-      left: 479px;
-      font-family: Aleo;
-      font-weight: Regular;
-      font-size: 15px;
-      opacity: 1;
-      text-align: left;
-    }
-    .v208_339 {
-      width: 191px;
-      color: rgba(0,0,0,1);
-      position: absolute;
-      top: 215px;
-      left: 60px;
-      font-family: Aleo;
-      font-weight: Regular;
-      font-size: 15px;
-      opacity: 1;
-      text-align: left;
-    }
+<html>
+  <py-script> print('nOW YOU CAN') </py-script>
+<head>
+    <h1>
+        Air Ticket Reservation System
+    </h1>
+</head>
+<body>
+    <!-- <iframe src="http://127.0.0.1:5000/customerSpendingIFRAME" 
+    title="pastFlights" width="700" height="300">
+    </iframe> -->
+
+
+    <br> Specify Time Range: </br>
+    <form action="/customerSpendingUpdate" method="POST">
+        <input type="date" name="Start Date" /> Start Date</br>
+        <input type="date" name="End Date" /> End Date</br></br>
+        <input type="submit" value=Search />
+        {% if error %}
+        <p class="error"><strong>Error:</strong> {{error}}</p>
+        {% endif %}
+    </form>
+
+
+   <style type="text/css">
+
+        .graph {
+            margin-bottom:1em;
+        font:normal 100%/150% arial, helvetica, sans-serif;
+        }
+
+        .graph caption {
+            font:bold 150%/120% arial, helvetica, sans-serif;
+            padding-bottom:0.33em;
+        }
+
+        .graph tbody th {
+            text-align:right;
+        }
+
+        @supports (display:grid) {
+
+            @media (min-width:32em) {
+
+                .graph {
+                    display:block;
+                width:900px;
+                height:300px;
+                }
+
+                .graph caption {
+                    display:block;
+                }
+
+                .graph thead {
+                    display:none;
+                }
+
+                .graph tbody {
+                    position:relative;
+                    display:grid;
+                    grid-template-columns:repeat(auto-fit, minmax(2em, 1fr));
+                    column-gap:1.5%;
+                    align-items:end;
+                    height:100%;
+                    margin:5em 0 1em 3em;      /*change this to make the graph move*/
+                    padding:0 1em;
+                    border-bottom:2px solid rgba(0,0,0,0.5);
+                    background:repeating-linear-gradient(
+                        180deg,
+                        rgba(170,170,170,0.7) 0,
+                        rgba(170,170,170,0.7) 1px,
+                        transparent 1px,
+                        transparent 20%
+                    );
+                }
+
+                .graph tbody:before,
+                .graph tbody:after {
+                    position:absolute;
+                    left:-10em;
+                    width:16em;
+                    text-align:right;
+                    font:bold 100%/120% arial,helvetica,sans-serif;
+                }
+
+                .graph tbody:before {
+                    content:"Ammount of Money";
+                    top:11em;
+                    transform:rotate(-90deg);
+                }
+
+                .graph tr {
+                    position:relative;
+                    display:block;
+                }
+
+                .graph tr:hover {
+                    z-index:999;
+                }
+
+                .graph th,
+                .graph td {
+                    display:block;
+                    text-align:center;
+                }
+
+                .graph tbody th {
+                    position:absolute;
+                    top:-3em;
+                    left:0;
+                    width:74%;
+                    font-weight:normal;
+                    text-align:center;
+            white-space:nowrap;
+                    text-indent:1;
+                    transform:rotate(-45deg);
+                }
+
+                .graph tbody th:after {
+                    content:"";
+                }
+
+                .graph td {
+                    width:100%;
+                    height:100%;
+                    background:#F63;
+                    border-radius:0.5em 0.5em 0 0;
+                    transition:background 0.5s;
+                }
+
+                .graph tr:hover td {
+                    opacity:0.85;
+                }
+
+                .graph td span {
+                    overflow:hidden;
+                    position:absolute;
+                    left:50%;
+                    top:50%;
+                    width:0;
+                    padding:0.5em 0;
+                    margin:-1em 0 0;
+                    font:normal 85%/120% arial,helvetica,sans-serif;
+                    font-weight:bold;
+                    opacity:0;
+                    transition:opacity 0.5s;
+            color:white;
+                }
+
+                .toggleGraph:checked + table td span,
+                .graph tr:hover td span {
+                    width:4em;
+                    margin-left:-2em;
+                    opacity:1;
+                }           
+            } 
+        }
     </style>
+    <table class="graph">
+        
+        <caption>Money spent last 6 months</caption>
+        <thead>
+            <tr>
+                <th scope="col">Month</th>
+                <th scope="col">Cost</th>
+            </tr>
+        </thead><tbody>
+            {% for i in indexes %}
+            <tr style = "height:{{percents[0][inherit]}}%">
+                <th scope="row">{{display_months[i+1]}} {{year}}</th>
+                <td><span>{{percents[i][0]}}$</span></td>
+            </tr>
+            <!-- <tr style = "height:{{percents[1][1]}}%">
+                <th scope="row">{{display_months[1]}} {{year}}</th>
+                <td><span>{{percents[1][0]}}$</span></td>
+            </tr>
+            <tr style = "height:{{percents[2][1]}}%">
+                <th scope="row">{{display_months[2]}} {{year}}</th>
+                <td><span>{{percents[2][0]}}$</span></td>
+            </tr>
+            <tr style = "height:{{percents[3][1]}}%">
+                <th scope="row">{{display_months[3]}} {{year}}</th>
+                <td><span>{{percents[3][0]}}$</span></td>
+            </tr>
+            <tr style = "height:{{percents[4][1]}}%">
+                <th scope="row">{{display_months[4]}} {{year}}</th>
+                <td><span>{{percents[4][0]}}$</span></td>
+            </tr>
+            <tr style = "height:{{percents[5][1]}}%">
+                <th scope="row">{{display_months[5]}} {{year}}</th>
+                <td><span>{{percents[5][0]}}$</span></td>
+            </tr> -->
+            {% endfor %}
+        </tbody>
+    </table>
+   
+
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <h3 style="color:#000000;" style = font-size:50px>
+    Total Cost from {{display_months[0]}} {{day}}, {{year}} to Now: ${{totalCost['totalCost']}}</h3></br>
+    <br></br>
+
+    <!-- <h4>Here is the Data</h4>
+    <iframe src="http://127.0.0.1:5000/customerSpendingIFRAME" height="500" width="1000" title="Iframe Example"></iframe>
+    
+
+    <br></br>
+    <br></br> -->
+    <a href="/customerHome">Go back</a>
+    <br></br>
+    <br></br>
+    <br></br>
+
+
+</body>
+
+
+
+
+
+
+</html>
