--- a/templates/customerHome.html
+++ b/templates/customerHome.html
@@ -10,10 +10,12 @@
     <br></br>
     <a href="/customerPurchase">Purchase a ticket</a>
     <br></br>
+    <a href="/customerDelete">Cancel a Ticket</a>
+    </br></br>
     <a href="/customerRateflight">Rate a flight</a>
     <br></br>
-    <!-- This links doesn't work -->
     <a href="/customerSpending">Track my spending</a></br></br>
+
 
     <style type="text/css">
         table, th, td {
