--- a/templates/customerPurchase.html
+++ b/templates/customerPurchase.html
@@ -16,7 +16,7 @@
 
     Available Flights to Purchase From:
     <table>
-        <th>Base Price</th>
+        <th>Cost</th>
         <th>Ticket ID</th>
         <th>Airline</th>
         <th>Flight No.</th>
@@ -43,8 +43,8 @@
 
     <form action="/customerPurchaseUpdate" method="POST">
         <fieldset><legend><b>Purchase your Ticket Today!</b></legend>
-        <b>Flight Number:</br></b>
-        <input type="numeric" name="flightNo" placeholder="Flight Number" maxlength="10" required /> </br></br>
+        <b>Ticket ID:</br></b>
+        <input type="numeric" name="ticketID" placeholder="TicketID" maxlength="10" required /> </br></br>
         <b>Customer Information:</br></b>
         <input type="text" name="Fname" placeholder="First Name" maxlength="225" required /></br>
         <input type="text" name="Lname" placeholder="Last Name" maxlength="225" required /></br>
@@ -58,8 +58,11 @@
         <input type="date" name="expiration start" value="expiration date" min="2022-11-29" max="2030-12-31">
         <br><br>
         <br><input type="submit" value=submit />
-        {% if error %}
-        <p class="error"><strong>Error:</strong> {{error}}</p>
+        {% if error and not flag%}
+            <p class="error"><strong>Error:</strong> {{error}}</p>
+        {% endif %}
+        {% if error and flag%}
+            <p class="error"><strong>Success:</strong> {{error}}</p>
         {% endif %}
     </form>
     
