--- a/templates/customerSpending.html
+++ b/templates/customerSpending.html
@@ -19,14 +19,16 @@
         <p class="error"><strong>Error:</strong> {{error}}</p>
         {% endif %}
     </form>
+    <h2><p style="color: #006587">Displaying payments from <b>{{bmonth}}, {{byear}} to {{emonth}}, {{eyear}}</b> - ({{noMonths}} months)</p></h2>
+    <h3><p style="color: #062380">Total cost from <b>{{bmonth}}, {{byear}} to {{emonth}}, {{eyear}}</b> - ({{noMonths}} months) = <b>${{pastXmonthsDisplay}}</b></p></h3>
+    <h3><p style="color: #a1002b">Total cost from <b>{{lstMonth}}, {{lstYear}} to {{tdyMonth}}, {{tdyYear}}</b> - ({{12}} months) = <b>${{yearCost}}</b></p></h3>
+	<div id='myDiv'>    
+    <script type="text/javascript">
+        x_unformatted = "{{x_unformatted}}";
+        y_unformatted = "{{y_unformatted}}"
+        x = x_unformatted.split('-');
+        y = y_unformatted.split('-');
 
-    {{valsOnly}}
-	<div id='myDiv'>
-    <script>
-        // x =  ['giraffes', 'orangutans', 'monkeys', 'dick']
-        // y =  [20, 14, 102, 0]
-        x =  ['December 2022', 'November 2022', 'October 2022', 'September 2022', 'August 2022', 'July 2022', 'June 2022'];
-        y =  ['0.00', '254.00', '112.00', '0.00', '0.00', '254.00', '100.00'];
         var data = [
         {
             x: x,
@@ -34,9 +36,13 @@
             type: 'bar'
         }
         ];
+
+        // x = y_unformatted.split('-');
+        //document.write(y);
         
         Plotly.newPlot('myDiv', data);
     </script>
     </div>
+    <a href="/customerHome">Go back</a>
 </body>
 
