--- a/templates/login.html
+++ b/templates/login.html
@@ -6,9 +6,13 @@
 	<input type="text" name = "username" placeholder="username" required/> </br>
 	<input type="password" name = "password" placeholder="password" required/></br>
 	<input type="submit" value = Login />
-	{% if error %}
+	{% if error and not flag%}
 		<p class="error"><strong>Error:</strong> {{error}}</p>
 	{% endif %}
+	{% if error and flag%}
+		<p class="error"><strong>Success:</strong> {{error}}</p>
+	{% endif %}
+
 </form>
 
 <a href="/">Go back</a>
