--- a/templates/index.html
+++ b/templates/index.html
@@ -32,10 +32,7 @@
     <h1 align="center" style="color:#01ffea;" style = font-size:50px> Air Ticket <br> Reservation System </h1></br>
 
 
-    <h1 align="center"> Air Ticket <br> Reservation System </h1></br>
-
-
-    <a href="/viewFlights"> Search Upcoming Flights</a>
+    <a href="/viewFlights" style="color:#ffffff;"> Search Upcoming Flights</a>
     <br></br>
     <a href="/staffLogin" style="color:#ffffff;"> Staff Login</a>
     <br></br>
