--- a/templates/dateChart.html
+++ b/templates/dateChart.html
@@ -1,70 +1,118 @@
-<html>
+{#<html>#}
+{#<head>#}
+{#    <h1>#}
+{#        NYU Tandon Airline Database System#}
+{#    </h1>#}
+{#</head>#}
+{#<body>#}
+{##}
+{#    <h3>#}
+{#        Date Range#}
+{#    </h3>#}
+{##}
+{#    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>#}
+{##}
+{#    <div class= "col-md-6 offset-md-3 my-5">#}
+{#        <div class= "card">#}
+{#          <div class= "card-body"></div>#}
+{#          <div class= "card-body">#}
+{#            <canvas id="dateChart" width="400" height="400"></canvas>#}
+{#          </div>#}
+{#        </div>#}
+{#      </div >#}
+{##}
+{#      <script>#}
+{#        var lineChart = document.getElementById('dateChart')#}
+{#        var lC = new Chart(lineChart, {#}
+{#          type: 'line',#}
+{#          data: {#}
+{##}
+{#            labels:[#}
+{#              {% for item in daterange %}#}
+{#                 "{{ item.purchase_date }}",#}
+{#              {% endfor %}#}
+{#            ],#}
+{##}
+{#            datasets:[{#}
+{#              label: "Ticket sales",#}
+{#              backgroundColor: 'rgb(255, 99, 132)',#}
+{#              borderColor: 'rgb(255, 99, 132)',#}
+{#              fill: false,#}
+{#              tension: 0,#}
+{#              data: [#}
+{#                {% for item in daterange %}#}
+{#                  "{{ item.ticket_sales }}",#}
+{#                {% endfor %}#}
+{#              ],#}
+{#            }]#}
+{#          },#}
+{##}
+{#          options: {#}
+{#            maintainAspectRatio: false,#}
+{#            responsive: false,#}
+{#            scales: {#}
+{#              yAxes: [ {#}
+{#                ticks: {#}
+{#                  beginAtZero: true#}
+{#                }#}
+{#              }#}
+{#              ]#}
+{#            }#}
+{#          }#}
+{#        })#}
+{##}
+{#      </script>#}
+{##}
+{#    <a href="/viewReports">Go back</a>#}
+{##}
+{#</body>#}
+{##}
+{#</html>#}
 <head>
     <h1>
-        NYU Tandon Airline Database System
+        Air Ticket Reservation System
     </h1>
 </head>
+
+<head>
+	<script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
+</head>
+
+
 <body>
+    <br> Specify Time Range: </br>
+    <form action="/staffSpendingUpdate" method="POST">
+        <input type="date" name="Start Date" /> Start Date</br>
+        <input type="date" name="End Date" /> End Date</br></br>
+        <input type="submit" value=Search />
+        {% if error %}
+        <p class="error"><strong>Error:</strong> {{error}}</p>
+        {% endif %}
+    </form>
+    {% if not error %}
+    <h2><p style="color: #006587">Displaying payments from <b>{{bmonth}}, {{byear}} to {{emonth}}, {{eyear}}</b> - ({{noMonths}} months) = <b>${{rangedTotalCost}}</b></p></h2>
+    <h3><p style="color: #a1002b">Total cost from <b>{{lstMonth}}, {{lstYear}} to {{tdyMonth}}, {{tdyYear}}</b> - (LAST YEAR) = <b>${{defaultYearCost}}</b></p></h3>
+	<div id='myDiv'>
+    {% endif %}
+    <script type="text/javascript">
+        x_unformatted = "{{x_unformatted}}";
+        y_unformatted = "{{y_unformatted}}"
+        x = x_unformatted.split('-');
+        y = y_unformatted.split('-');
 
-    <h3>
-        Date Range
-    </h3>
+        var data = [
+        {
+            x: x,
+            y: y,
+            type: 'bar'
+        }
+        ];
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+        // x = y_unformatted.split('-');
+        //document.write(y);
 
-    <div class= "col-md-6 offset-md-3 my-5">
-        <div class= "card">
-          <div class= "card-body"></div>
-          <div class= "card-body">
-            <canvas id="dateChart" width="400" height="400"></canvas>
-          </div>
-        </div>
-      </div >
-
-      <script>
-        var lineChart = document.getElementById('dateChart')
-        var lC = new Chart(lineChart, {
-          type: 'line',
-          data: {
-
-            labels:[
-              {% for item in daterange %}
-                 "{{ item.purchase_date }}",
-              {% endfor %}
-            ],
-
-            datasets:[{
-              label: "Ticket sales",
-              backgroundColor: 'rgb(255, 99, 132)',
-              borderColor: 'rgb(255, 99, 132)',
-              fill: false,
-              tension: 0,
-              data: [
-                {% for item in daterange %}
-                  "{{ item.ticket_sales }}",
-                {% endfor %}
-              ],
-            }]
-          },
-
-          options: {
-            maintainAspectRatio: false,
-            responsive: false,
-            scales: {
-              yAxes: [ {
-                ticks: {
-                  beginAtZero: true
-                }
-              }
-              ]
-            }
-          }
-        })
-
-      </script>
-
-    <a href="/viewReports">Go back</a>
-
+        Plotly.newPlot('myDiv', data);
+    </script>
+    </div>
+    <a href="/staffHome">Go back</a>
 </body>
-
-</html>
