--- a/templates/staffHome.html
+++ b/templates/staffHome.html
@@ -23,7 +23,7 @@
     <br></br>
     <a href="/frequentCustomers">View frequent customers</a>
     <br></br>
-    <a href="/viewReports">View reports</a>
+    <a href="/staffSpending">View reports</a>
     <br></br>
     <a href="/compareRevenue">Revenue</a></br>
 
