--- a/templates/staffHome.html
+++ b/templates/staffHome.html
@@ -25,7 +25,11 @@
     <br></br>
     <a href="/staffSpending">View reports</a>
     <br></br>
-    <a href="/compareRevenue">Revenue</a></br>
+    <a href="/compareRevenue">Revenue</a>
+    <br></br>
+    <a href="/staffAddEmail">Add New Email</a>
+    <br></br>
+    <a href="/staffAddPhone">Add New Phone</a> <br>
 
     <style type="text/css">
         table, th, td {
