--- a/templates/staffRegister.html
+++ b/templates/staffRegister.html
@@ -16,6 +16,8 @@
         <input type="text" name="email" placeholder="Email address" maxlength="50" required  /></br></br>
 		Date of birth:</br>
 		<input type="date" name="dateofbirth" required /></br></br>
+        <label for="phone">Phone Number:</label></br>
+        <input type="text" name="phone" placeholder="Phone Number" maxlength="15" /></br></br>
 		Name of airline:</br>
 		<input type="text" name="airline" placeholder="Airline" maxlength="20" required /></br></br>
 		<input type="submit" value=Register />
