changed naming of certain functions

--- a/templates/addAirport.html
+++ b/templates/addAirport.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <form action="/addAirportResult" method="POST">
+    <form action="/addAirportForm" method="POST">
         <label for="airport_name">Airport name:</label>
 		<input type="text" name="airport_name" placeholder="IATA Code e.g JFK" maxlength="255" required /></br></br>
 
