--- a/templates/addPlane.html
+++ b/templates/addPlane.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <form action="/addPlaneResult" method="POST">
+    <form action="/addPlaneForm" method="POST">
         <label for="airplaneID">Airplane ID:</label>
         <input type="text" name="airplaneID" maxlength="9" required /></br></br>
 
