--- a/templates/flightStatus.html
+++ b/templates/flightStatus.html
@@ -13,7 +13,7 @@
 <body>
 
 
-    <form action="/flightStatusResult" method="POST">
+    <form action="/flightStatusForm" method="POST">
         <label for="flight_number">Flight num:</label>
         <input type="text" name="flight_number" maxlength="10" required /></br></br>
 
