--- a/templates/addFlight.html
+++ b/templates/addFlight.html
@@ -47,7 +47,7 @@
     <h2>
         Add new flight
     </h2>
-    <form action="/addFlightResult" method="POST">
+    <form action="/addFlightForm" method="POST">
 
         <label for="flight_number">Flight num:</label>
         <input type="text" name="flight_number" maxlength="9" required /></br></br>
