--- a/templates/staffLogin.html
+++ b/templates/staffLogin.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <form action="/staffLoginAuth" method="POST">
-        <input type="text" name="username" placeholder="username" required /> </br>
+        <input type="text" name="username" placeholder="username" maxlength="255" required /> </br>
         <input type="password" name="password" placeholder="password" required /></br>
         <input type="submit" value=Login />
         {% if error %}
