--- a/templates/customerFlights.html
+++ b/templates/customerFlights.html
@@ -19,14 +19,14 @@
 
 <table>
     <th>Airline</th>
-    <th>Flight No.</th>
+    <th>Flight Number</th>
     <th>Departure Date/Time</th>
     <th>Arrival Date/Time</th>
     <th>Base Price</th>
     <th>Status</th>
     <th>Departure Airport</th>
     <th>Arrival Airport</th>
-    <th>Airplane</th>
+    <th>Airplane ID</th>
 
     {% for line in flights %}
     <tr>
