--- a/templates/flightStatus.html
+++ b/templates/flightStatus.html
@@ -14,10 +14,10 @@
 
 
     <form action="/flightStatusForm" method="POST">
-        <label for="flight_number">Flight num:</label>
+        <label for="flight_number">Flight number:</label>
         <input type="text" name="flight_number" maxlength="9" required /></br></br>
 
-        <label for="departure_date_time">Depart date:</label>
+        <label for="departure_date_time">Departure date:</label>
         <input type="datetime" name="departure_date_time" placeholder="yyyy-mm-dd 00:00:00" required /></br></br>
 
         <label for="status">Flight status:</label>
