--- a/templates/passengerList.html
+++ b/templates/passengerList.html
@@ -19,9 +19,9 @@
 
 <table>
     <th>Name</th>
-    <th>Phone No.</th>
-    <th>Passport No.</th>
-    <th>Passport Expiration</th>
+    <th>Phone Number</th>
+    <th>Passport Number</th>
+    <th>Passport Expiration Date</th>
 
     {% for line in passenger %}
         <tr>
