--- a/templates/staffHome.html
+++ b/templates/staffHome.html
@@ -43,7 +43,7 @@
 
     <table>
         <th>Airline</th>
-        <th>Flight No.</th>
+        <th>Flight Number</th>
         <th>Departure Date/Time</th>
         <th>Arrival Date/Time</th>
         <th>Status</th>
