--- a/templates/staffViewFlights.html
+++ b/templates/staffViewFlights.html
@@ -17,7 +17,17 @@
     </form>
 
     Search by date range (departure date) </br>
-    <form action="/dateSearch" method="POST">
+    <form action="/dateDepSearch" method="POST">
+        <input type="date" name="startdate" placeholder="yyyy-mm-dd" required /> Start date</br>
+        <input type="date" name="enddate" placeholder="yyyy-mm-dd" required /> End date</br>
+        <input type="submit" value=Search />
+        {% if error %}
+        <p class="error"><strong>Error:</strong> {{error}}</p>
+        {% endif %}
+    </form>
+
+    Search by date range (arrival date) </br>
+    <form action="/dateArrivSearch" method="POST">
         <input type="date" name="startdate" placeholder="yyyy-mm-dd" required /> Start date</br>
         <input type="date" name="enddate" placeholder="yyyy-mm-dd" required /> End date</br>
         <input type="submit" value=Search />
