Cleaned up some code

--- a/templates/customerDelete.html
+++ b/templates/customerDelete.html
@@ -44,7 +44,8 @@
     <form action="/customerDelete" method="POST">
         <fieldset><legend><b>Cancel Your Tickets Before it is Too Late!!!</b></legend>
         <b>Enter the Ticket ID:</br></b>
-        <input type="numeric" name="ticket_ID" placeholder="ticket_ID" maxlength="11" required /> </br></br>
+{#        <input type="numeric" name="ticket_ID" placeholder="ticket_ID" maxlength="11" required /> </br></br>#}
+        <input type="number" name="ticket_ID" placeholder="ticket_ID" required /></br></br>
         <br><input type="submit" value=Delete />
 
 
